[metadata]
name = pyjamfpro
version = 0.1.1
author = Doug Penny
author_email = dpenny@icloud.com
description = Asynchronous client for Jamf Classic/Pro API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dougpenny/PyJamfPro
project_urls =
    Bug Tracker = https://github.com/dougpenny/PyJamfPro/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    dict2xml >= 1.7.1
    httpx >= 0.22.0
    python-dateutil >= 2.8.2

[options.packages.find]
where = src